refactor: почистил код